--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,10 +2,14 @@
 <div class="row mb-4 project">
     <div class="col-md-5">
         <h2>
-            <a href="/post/{{post.title}}"></a>
+            <a href="/post/{{post.id}}">{{post.title}}</a>
         </h2>
+        <p>By {{post.user.username}} on {{format_date post.date}}</p>
+    </div>
+    <div class="col-md-7">
         <p>
-            {{post.}}
+            {{post.content}}
         </p>
     </div>
 </div>
+{{/each}}
