--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,7 +7,7 @@
     <div class="col-md-6">
         <h3>Create a New Post:</h3>
 
-        <form class="form new-project-form">
+        <form class="form new-post-form">
             <div class="form-group">
                 <label for="post-name">Title:</label>
                 <input class="form-input" type="text" id="post-name" name="post-name" />
@@ -23,7 +23,7 @@
     </div>
 
     {{#if post.length}}
-    <div class="col-md-6 project-list">
+    <div class="col-md-6 post-list">
         <h3>My Posts:</h3>
 
         {{#each post as |post|}}
@@ -41,4 +41,4 @@
 {{/if}}
 </div>
 
-<script src="./js/profile.js"></script>
+<script src="../public/js/dashboard.js"></script>
