--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
                 <a href="/dashboard">Dashboard</a>
                 <button class="no-button" id="logout">Logout</button>
                 {{else}}
-                <a href="/homePage">Home</a>
+                <a href="/homepage">Home</a>
                 <a href="/dashboard">Dashboard</a>
                 <a href="/login">Login</a>
                 {{/if}}
