--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-auto">
-        <h2>Welcome, {{name}}!</h2>
+        <h2>Welcome, {{user.username}}!</h2>
     </div>
 </div>
 <div class="row mt-4">
@@ -27,10 +27,10 @@
         <h3>My Posts:</h3>
 
         {{#each post as |post|}}
-        <h2>{{title}}</h2>
-        <p>Created by {{user.username}} on {{format_date date}}</p>
+        <h2>{{post.title}}</h2>
+        <p>Created by {{user.username}} on {{format_date post.date}}</p>
         <p>
-            {{content}}
+            {{post.content}}
         </p>
         <button class="btn btn-sm " data-id="{{post.id}}">EDIT</button>
         <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
