--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Blog</title>
-    <link rel="stylesheet" href="/public/css/style.css  ">
-    <link rel="stylesheet" href="/public/css/jass.css  ">
+    <link rel="stylesheet" href="/css/jass.css  ">
+    <link rel="stylesheet" href="/css/style.css  ">
 </head>
 
 <body>
@@ -39,9 +39,9 @@
 
     <!-- Render script for logged in users only -->
     {{#if logged_in}}
-    <script src="../../public/js/dashboard.js"></script>
+    <script src="/js/dashboard.js"></script>
     {{else}}
-    <script src="../../public/js/logout.js"></script>
+    <script src="/js/logout.js"></script>
     {{/if}}
 </body>
 
