--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -5,11 +5,18 @@
         {{content}}
     </p>
     <h3>Comments:</h3>
-    {{#each comments as |comment| }}
+    <form class="form new-comment-form">
+        <div class="form-group">
+            <textarea class="form-input" id="comment-content" name="comment-content"></textarea>
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary">Create</button>
+        </div>
+    </form>
     <div class="comment">
-        <p>{{username}}{{date}}:</p>
-        <p>{{comment}}</p>
+        {{#each comments as |comment| }}
+        {{> comments }}
+        {{/each}}
     </div>
-    {{/each}}
 
 </div>
