--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,7 +1,7 @@
 <div class="text-center">
     Past Comments:
-    <p>{{comment.user.username}} on {{format_date comment.date}}</p>
+    <p>{{username}} on {{format_date date}}</p>
     <p>
-        {{comment.comment}}
+        {{comment}}
     </p>
 </div>
