working as i can get it for right now will come back if i have time

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -33,8 +33,8 @@
         <p>
             {{post.content}}
         </p>
-        <button class="btn btn-sm " data-id="{{post.id}}">EDIT</button>
-        <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
+        <button class="btn btn-sm editPost" data-id="{{post.id}}">EDIT</button>
+        <button class="btn btn-sm btn-danger delPost" data-id="{{post.id}}">DELETE</button>
     </div>
     {{/each}}
 </div>
