--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,22 +1,31 @@
 <div class="text-center">
-    <h2>{{title}}</h2>
-    <p>Created by {{username}} on {{format_date date}}</p>
+    <h2>{{post.title}}</h2>
+    <p>Created by {{post.user.username}} on {{format_date post.date}}</p>
     <p>
-        {{content}}
+        {{post.content}}{{post.id}}
+
     </p>
     <h3>Comments:</h3>
-    <form class="form new-comment-form">
+    <form class="form new-comment-form" id="commentForm">
+        <input type="hidden" id="postId" value={{post.id}}>
         <div class="form-group">
+
             <textarea class="form-input" id="comment-content" name="comment-content"></textarea>
         </div>
         <div class="form-group">
+
             <button type="submit" class="btn btn-primary">Create</button>
         </div>
     </form>
     <div class="comment">
-        {{#each comments as |comment| }}
-        {{> comments }}
-        {{/each}}
+        <div class="text-center">
+            Past Comments:
+            {{#each comments as |comment| }}
+            {{> comment }}
+
+            {{/each}}
+        </div>
     </div>
 
 </div>
+<script src="/js/dashboard.js"></script>
